refactor: clean up